--- a/styles.css
+++ b/styles.css
@@ -173,7 +173,7 @@ body {
 
 .resume .resume_right .resume_work ul,
 .resume .resume_right .resume_education ul {
-  padding-left: 40px;
+  padding-left: 30px;
   overflow: hidden;
 }
 
@@ -214,7 +214,7 @@ body {
   top: 14px;
   left: -21px;
   width: 2px;
-  height: 320px;
+  height: 95%;
   background: #0bb5f4;
 }
 
