--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,8 @@ a {
 }
 
 body {
-  background: #585c68;
+  background-image: url(space.jpg);
+  background-size: cover;
   font-size: 14px;
   line-height: 22px;
   color: #555555;
@@ -24,6 +25,17 @@ body {
   font-weight: 700;
   font-size: 20px;
   text-transform: uppercase;
+  text-shadow: 1px 1px 1px#555555;
+}
+
+.bold-name {
+  font-weight: 700;
+  font-size: 25px;
+  text-transform: uppercase;
+  color: #fff;
+  text-align: center;
+  text-shadow: 2px 2px 2px #555555;
+  margin-bottom: 5%;
 }
 
 .semi-bold {
@@ -40,7 +52,7 @@ body {
 }
 
 .resume .resume_left {
-  width: 325px;
+  width: 300px;
   background: #0bb5f4;
 }
 
@@ -56,9 +68,10 @@ body {
   height: 100%;
   background-repeat: no-repeat;
   background-position: 50%;
-  border-radius: 50%;
+  border-radius: 60%;
   background-size: 100% auto;
   text-align: center;
+  box-shadow: 2px 2px 2px 2px#555555;
 }
 
 .resume .resume_left .resume_content {
@@ -80,6 +93,7 @@ body {
 .resume .resume_item {
   padding: 25px 0;
   border-bottom: 2px solid #b1eaff;
+  text-align: justify;
 }
 
 .resume .resume_left .resume_item:last-child,
@@ -126,10 +140,12 @@ body {
   color: #b1eaff;
   justify-content: space-between;
   align-items: center;
+  /* flex-direction: column; */
 }
 
 .resume .resume_left .resume_skills ul li .skill_name {
-  width: 25%;
+  width: 100%;
+  display: flex;
 }
 
 .resume .resume_left .resume_skills ul li .soft_skill_name {
@@ -137,8 +153,7 @@ body {
 }
 
 .resume .resume_left .resume_skills ul li .skill_progress {
-  width: 50%;
-  margin: 0 5px;
+  width: 80%;
   height: 5px;
   background: #009fd9;
   position: relative;
@@ -162,7 +177,7 @@ body {
 }
 
 .resume .resume_right {
-  width: 650px;
+  width: 750px;
   background: #fff;
   padding: 25px;
 }
@@ -175,6 +190,7 @@ body {
 .resume .resume_right .resume_education ul {
   padding-left: 30px;
   overflow: hidden;
+  text-align: justify;
 }
 
 .resume .resume_right ul li {
