--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ a {
 
 body {
   background-image: url(space.jpg);
+  /*background-color: #000000;*/
   background-size: cover;
   font-size: 14px;
   line-height: 22px;
@@ -37,8 +38,13 @@ body {
 }
 
 .semi-bold {
-  font-weight: 500;
-  font-size: 16px;
+  font-weight: 700;
+  font-size: 18px;
+}
+
+.semi-bold-description {
+  font-weight: 520;
+  font-size: 13px;
 }
 
 .resume {
@@ -50,7 +56,7 @@ body {
 }
 
 .resume .resume_left {
-  width: 300px;
+  width: 350px;
   background: #0bb5f4;
 }
 
@@ -173,7 +179,7 @@ body {
 }
 
 .resume .resume_right {
-  width: 750px;
+  width: 850px;
   background: #fff;
   padding: 25px;
 }
@@ -233,30 +239,32 @@ body {
 .resume .resume_right .resume_hobby ul {
   display: flex;
   justify-content: space-between;
+  font-size: 13px;
+  font-weight: 501;
 }
 
 .resume .resume_right .resume_hobby ul li {
   width: 80px;
   height: 80px;
-  border: 2px solid #0bb5f4;
+  border: 4px solid #0bb5f4;
   border-radius: 50%;
   position: relative;
   color: #0bb5f4;
   text-align: center;
-  padding-top: 13%;
+  padding-top: 10%;
 }
 
 .resume .resume_right .resume_hobby ul li i {
-  font-size: 30px;
+  font-size: 45px;
 }
 
 .resume .resume_right .resume_hobby ul li:before {
   content: "";
   position: absolute;
   top: 40px;
-  right: -130px;
-  width: 130px;
-  height: 2px;
+  right: -160px;
+  width: 156px;
+  height: 3px;
   background: #0bb5f4;
 }
 
